fix align

--- a/src/app/personal/address/address.component.scss
+++ b/src/app/personal/address/address.component.scss
@@ -108,6 +108,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: baseline;
             @media screen and (max-width: 1023px) {
               display: flex;
               flex-direction: column;
@@ -127,6 +128,7 @@
           flex-direction: row;
           width: 48%;
           justify-content: space-between;
+          align-items: baseline;
           @media screen and (max-width: 1023px) {
             flex-direction: column;
             width: 100%;
